# sentence_analysis

./: README.md  Sentences.ipynb  setup.cfg
