[metadata]
name = sentence_analysis
version = attr: sentence_analysis.__version__
author = Chris Brew
author_email = christopher.brew@lexisnexis.com
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas == 1.4.1
    PyYAML >= 6.0
    typer
    nltk
    svgling
    jupyter

[options.entry_points]
console_scripts =
    my-example-utility = example.example_module:main

[options.extras_require]
notebook = jupyter>=1.0.0
dev =
    black==22.1.0
    flake8==4.0.1

[options.package_data]
example = data/schema.json, *.txt
* = README.md